--- a/trunk/Utils/TranslationManager/TranslationManager.lpi
+++ b/trunk/Utils/TranslationManager/TranslationManager.lpi
@@ -21,7 +21,7 @@
     </BuildModes>
     <PublishOptions>
       <Version Value="2"/>
-      <IncludeFileFilter Value="*.(pas|pp|inc|lfm|lpr|lrs|lpi|lpk|sh|xml)"/>
+      <IncludeFileFilter Value="*.(pas|pp|inc|lfm|dpr|lrs|lpi|lpk|sh|xml)"/>
       <ExcludeFileFilter Value="*.(bak|ppu|o|so);*~;backup"/>
     </PublishOptions>
     <RunParams>
@@ -34,15 +34,18 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="19">
+    <Units Count="20">
       <Unit0>
-        <Filename Value="TranslationManager.lpr"/>
+        <Filename Value="TranslationManager.dpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="TranslationManager"/>
+        <EditorIndex Value="3"/>
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
-        <CursorPos X="1" Y="20"/>
+        <CursorPos X="4" Y="18"/>
         <UsageCount Value="23"/>
+        <Loaded Value="True"/>
+        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit0>
       <Unit1>
         <Filename Value="Unit1.pas"/>
@@ -53,11 +56,12 @@
         <IsVisibleTab Value="True"/>
         <EditorIndex Value="0"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="344"/>
-        <CursorPos X="29" Y="349"/>
+        <TopLine Value="94"/>
+        <CursorPos X="3" Y="96"/>
         <UsageCount Value="11"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
+        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit1>
       <Unit2>
         <Filename Value="C:\lazarus\lcl\include\customedit.inc"/>
@@ -75,10 +79,12 @@
       </Unit3>
       <Unit4>
         <Filename Value="C:\lazarus\lcl\include\control.inc"/>
+        <EditorIndex Value="1"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="4171"/>
-        <CursorPos X="1" Y="4188"/>
+        <TopLine Value="3177"/>
+        <CursorPos X="17" Y="3197"/>
         <UsageCount Value="10"/>
+        <Loaded Value="True"/>
       </Unit4>
       <Unit5>
         <Filename Value="C:\lazarus\lcl\include\customlistbox.inc"/>
@@ -184,80 +190,139 @@
         <CursorPos X="3" Y="126"/>
         <UsageCount Value="10"/>
       </Unit18>
+      <Unit19>
+        <Filename Value="Unit_PathManager.pas"/>
+        <UnitName Value="Unit_PathManager"/>
+        <EditorIndex Value="2"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="55"/>
+        <CursorPos X="34" Y="67"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+        <DefaultSyntaxHighlighter Value="Delphi"/>
+      </Unit19>
     </Units>
-    <JumpHistory Count="18" HistoryIndex="17">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="310" Column="1" TopLine="299"/>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="74" Column="1" TopLine="55"/>
       </Position1>
       <Position2>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="320" Column="1" TopLine="299"/>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="80" Column="1" TopLine="55"/>
       </Position2>
       <Position3>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="308" Column="1" TopLine="299"/>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="70" Column="1" TopLine="55"/>
       </Position3>
       <Position4>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="399" Column="54" TopLine="389"/>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="71" Column="1" TopLine="55"/>
       </Position4>
       <Position5>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="339" Column="8" TopLine="336"/>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="72" Column="1" TopLine="55"/>
       </Position5>
       <Position6>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="309" Column="25" TopLine="293"/>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="80" Column="1" TopLine="55"/>
       </Position6>
       <Position7>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="336" Column="55" TopLine="332"/>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="70" Column="1" TopLine="55"/>
       </Position7>
       <Position8>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="339" Column="64" TopLine="332"/>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="71" Column="1" TopLine="55"/>
       </Position8>
       <Position9>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="309" Column="28" TopLine="303"/>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="74" Column="1" TopLine="55"/>
       </Position9>
       <Position10>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="336" Column="30" TopLine="314"/>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="80" Column="1" TopLine="55"/>
       </Position10>
       <Position11>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="337" Column="27" TopLine="314"/>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="70" Column="1" TopLine="55"/>
       </Position11>
       <Position12>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="335" Column="36" TopLine="314"/>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="71" Column="1" TopLine="55"/>
       </Position12>
       <Position13>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="316" Column="57" TopLine="299"/>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="74" Column="1" TopLine="55"/>
       </Position13>
       <Position14>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="126" Column="22" TopLine="125"/>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="80" Column="1" TopLine="55"/>
       </Position14>
       <Position15>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="140" Column="16" TopLine="125"/>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="70" Column="1" TopLine="55"/>
       </Position15>
       <Position16>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="141" Column="37" TopLine="125"/>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="71" Column="1" TopLine="55"/>
       </Position16>
       <Position17>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="130" Column="42" TopLine="124"/>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="72" Column="1" TopLine="55"/>
       </Position17>
       <Position18>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="317" Column="34" TopLine="306"/>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="80" Column="1" TopLine="55"/>
       </Position18>
+      <Position19>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="70" Column="1" TopLine="55"/>
+      </Position19>
+      <Position20>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="71" Column="1" TopLine="55"/>
+      </Position20>
+      <Position21>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="72" Column="1" TopLine="55"/>
+      </Position21>
+      <Position22>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="80" Column="1" TopLine="55"/>
+      </Position22>
+      <Position23>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="70" Column="1" TopLine="55"/>
+      </Position23>
+      <Position24>
+        <Filename Value="Unit_PathManager.pas"/>
+        <Caret Line="71" Column="1" TopLine="55"/>
+      </Position24>
+      <Position25>
+        <Filename Value="Unit1.pas"/>
+        <Caret Line="96" Column="49" TopLine="82"/>
+      </Position25>
+      <Position26>
+        <Filename Value="Unit1.pas"/>
+        <Caret Line="536" Column="127" TopLine="509"/>
+      </Position26>
+      <Position27>
+        <Filename Value="TranslationManager.dpr"/>
+        <Caret Line="17" Column="1" TopLine="1"/>
+      </Position27>
+      <Position28>
+        <Filename Value="TranslationManager.dpr"/>
+        <Caret Line="18" Column="4" TopLine="1"/>
+      </Position28>
+      <Position29>
+        <Filename Value="C:\lazarus\lcl\include\control.inc"/>
+        <Caret Line="3199" Column="96" TopLine="3177"/>
+      </Position29>
+      <Position30>
+        <Filename Value="Unit1.pas"/>
+        <Caret Line="536" Column="127" TopLine="509"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
@@ -267,9 +332,14 @@
       <Filename Value="TranslationManager"/>
     </Target>
     <SearchPaths>
-      <IncludeFiles Value="$(ProjOutDir)"/>
-      <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
+      <IncludeFiles Value="..\..;$(ProjOutDir)"/>
+      <OtherUnitFiles Value="..\.."/>
     </SearchPaths>
+    <Parsing>
+      <SyntaxOptions>
+        <SyntaxMode Value="Delphi"/>
+      </SyntaxOptions>
+    </Parsing>
     <CodeGeneration>
       <Checks>
         <IOChecks Value="True"/>
