--- a/trunk/Test/KaM_RemakeTests.dproj
+++ b/trunk/Test/KaM_RemakeTests.dproj
@@ -91,11 +91,9 @@
 				<MainSource>MainSource</MainSource>
 			</DelphiCompile>
 			<DCCReference Include="TestKM_CommonClasses.pas"/>
-			<DCCReference Include="..\KM_CommonClasses.pas"/>
 			<DCCReference Include="TestKM_Campaigns.pas"/>
-			<DCCReference Include="..\KM_Campaigns.pas"/>
 			<DCCReference Include="TestKM_Game.pas"/>
-			<DCCReference Include="..\KM_Game.pas"/>
+			<DCCReference Include="TestKM_Points.pas"/>
 			<BuildConfiguration Include="Release">
 				<Key>Cfg_2</Key>
 				<CfgParent>Base</CfgParent>
