--- a/KaM_Remake.dproj
+++ b/KaM_Remake.dproj
@@ -136,6 +136,7 @@
 			<DCCReference Include="KM_NetworkTypes.pas"/>
 			<DCCReference Include="KM_NetPlayersList.pas"/>
 			<DCCReference Include="KM_PathFinding.pas"/>
+			<DCCReference Include="KM_PathFindingRoad.pas"/>
 			<DCCReference Include="KM_Pics.pas"/>
 			<DCCReference Include="KM_Player.pas"/>
 			<DCCReference Include="KM_PlayerAI.pas"/>
