--- a/trunk/Test/KaM_RemakeTests.dproj
+++ b/trunk/Test/KaM_RemakeTests.dproj
@@ -94,6 +94,7 @@
 			<DCCReference Include="TestKM_Campaigns.pas"/>
 			<DCCReference Include="TestKM_Game.pas"/>
 			<DCCReference Include="TestKM_Points.pas"/>
+			<DCCReference Include="TestKM_Terrain.pas"/>
 			<BuildConfiguration Include="Release">
 				<Key>Cfg_2</Key>
 				<CfgParent>Base</CfgParent>
